# parliament-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  Dockerfile.lambda  Dockerfile.mcp-server  Makefile  README.md  claude_config.json  docker-compose.yaml  justfile  pyproject.toml  release.sh
.github/: .github.env
.github/workflows/: build.yml  checks.yml  cruft-update.yml  pre-commit.yml  release.yml
mcp_server/: Dockerfile  pyproject.toml
mcp_server/app/: api.py  main.py  utils.py
mcp_server/tests/: conftest.py  test_agent.py  test_elasticsearch_setup.py  test_handlers.py
parliament_mcp/: __init__.py  cli.py  data_loaders.py  elasticsearch_helpers.py  embedding_helpers.py  lambda_handler.py  models.py  openai_helpers.py  qdrant_data_loaders.py  qdrant_helpers.py  settings.py
parliament_mcp/mcp_server/: __init__.py  api.py  atr_guard.py  bills.py  committees.py  handlers.py  main.py  members.py  qdrant_handlers.py  qdrant_query_handler.py  resources.py  rest_api.py  utils.py
parliament_mcp/shared_utils/: auth.py
scripts/: es_to_qdrant_etl.py
terraform/: .terraform.lock.hcl  backend.hcl  data.tf  diagram_script.py  ecs.tf  iam.tf  lambda.tf  load_balancer.tf  provider.tf  qdrant-efs.tf  qdrant.tf  secrets.tf  variables.tf
terraform/variables/: dev.tfvars  global.tfvars  preprod.tfvars  prod.tfvars
tests/: conftest.py  test_cli.py  test_data_loaders.py  test_elasticsearch_setup.py  test_models.py
tests/mcp_server/: test_agent.py  test_api.py  test_atr_guard.py  test_benchmarks.py  test_handlers.py  test_utils.py
